# vajra-meta-hackathon

./: Dockerfile  README.md  app.py  core.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
server/: app.py
server/environment/: __init__.py  core.py  graders.py  infrastructure.py  models.py  rewards.py  scenario_generator.py  tasks.py
tests/: test_env.py
