[project]
name = "vajra-meta-hackathon"
version = "1.2.0"
description = "Incident Response & Root Cause Analysis OpenEnv"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.2",
    "openai==1.6.1",
    "python-dotenv==1.0.0",
    "httpx==0.25.2",
    "PyYAML==6.0.1",
    "numpy==1.26.2",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["environment*", "server*", "baseline*"]